# QEP_Solver_GUI

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  config.json  config.schema.json
Problems/benchmark/acoustic_wave_200k/: problem.json
Problems/benchmark/damped_beam_10k/: problem.json
Problems/benchmark/spring_200k/: problem.json
Problems/benchmark/test_prob_1/: problem.json
Problems/benchmark/wiresaw1_10k/: problem.json
Problems/engineering/generator_rotor_1k/: problem.json
Problems/engineering/plate_10k/: problem.json
Problems/engineering/turbine_560k/: problem.json
Problems/engineering/vibrating_screen_780k/: problem.json
Problems/small_demo/sym_indefinite/: problem.json
Problems/small_demo/sym_pos_def/: problem.json
Problems/small_demo/sym_semi_pos_def/: problem.json
Problems/small_demo/unsymmetric/: problem.json
Problems/user's problems/test1/: problem.json
Problems/user/test/: C.txt  K.txt  M.txt  problem.json
Result/: CGandLLT.txt  LLT.txt  ProMtrixProperies.txt  acoustic_wave_1d.txt  daped_beam.txt  pardiso_0.txt  spring.txt  test1_0.txt  test1_20.txt  wiresaw1.txt
cmake/: QEPConfig.cmake.in
examples/: CMakeLists.txt  simple_example.cpp
include/config/: AppConfig.h  BinaryConvertList.h  ConfigManager.h  GlobalConfig.h  SolverParams.h  SolverRegistry.h  TableFormatter.h  TestCases.h
include/qep/: QEP.h
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  TestHarness.cpp  TestHarness.h  main.cpp
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/gui/panels/: ConfigPanel.cpp  ConfigPanel.h  OutputPanel.cpp  OutputPanel.h  ProblemTreePanel.cpp  ProblemTreePanel.h  SolverPanel.cpp  SolverPanel.h
src/gui/styles/: StyleConstants.h
src/gui/utils/: EigenvalueFormatter.h  QepMetaType.h
src/gui/utils/styles/: StyleConstants.h
src/gui/workers/: SolverWorker.cpp  SolverWorker.h
src/qep/config/: GlobalConfig.h  SolverRegistry.h
src/qep/core/: UnifiedSolver.cpp
src/qep/io/: MatrixIO.cpp  MatrixIO.h
src/qep/utils/: ConfigManager.cpp  ConsoleUtils.cpp  ConsoleUtils.h  CreatProblem.cpp  CreatProblem.h  CreateProblem.cpp  CreateProblem.h  MatrixProperties.cpp  MatrixProperties.h  NumericUtils.cpp  NumericUtils.h  PrintUtils.cpp  PrintUtils.h  ResidualValidation.cpp  ResidualValidation.h  SystemUtils.cpp  SystemUtils.h
src/test/: CMakeLists.txt  TestHarness.cpp  TestHarness.h  main.cpp
